added thicker lines and removed background color

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,8 @@
          "legendgroup": "Andel ej godkända Totalt",
          "line": {
           "color": "#636efa",
-          "dash": "solid"
+          "dash": "solid",
+          "width": 4
          },
          "marker": {
           "symbol": "circle"
@@ -407,7 +408,8 @@
          "legendgroup": "Andel ej godkända Flickor",
          "line": {
           "color": "#EF553B",
-          "dash": "solid"
+          "dash": "solid",
+          "width": 4
          },
          "marker": {
           "symbol": "circle"
@@ -439,7 +441,8 @@
          "legendgroup": "Andel ej godkända Pojkar",
          "line": {
           "color": "#00cc96",
-          "dash": "solid"
+          "dash": "solid",
+          "width": 4
          },
          "marker": {
           "symbol": "circle"
@@ -474,6 +477,7 @@
          },
          "tracegroupgap": 0
         },
+        "plot_bgcolor": "white",
         "template": {
          "data": {
           "bar": [
@@ -1359,16 +1363,19 @@
     "df[\"Andel ej godkända Pojkar\"] = (1 - df[\"Pojkar med godkända slutbetyg\"] / df[\"Pojkar\"]) * 100\n",
     "\n",
     "# Skapar linjediagrammet\n",
-    "fig = px.line(df, x=\"Läsår\", y=[\"Andel ej godkända Totalt\", \"Andel ej godkända Flickor\", \"Andel ej godkända Pojkar\"],\n",
+    "linear_fig = px.line(df, x=\"Läsår\", y=[\"Andel ej godkända Totalt\", \"Andel ej godkända Flickor\", \"Andel ej godkända Pojkar\"],\n",
     "              labels={\"value\": \"Andel ej godkända (%)\", \"variable\": \"Kategori\"},\n",
     "              title=\"Andel elever utan godkända betyg\")\n",
     "\n",
     "# Tar bort onödigt mellanrum mellan heltalsåren och utökar x-axelns intervall\n",
-    "fig.update_xaxes(dtick=1,range=[2018,2023])\n",
-    "fig.update_xaxes(showgrid=False)\n",
-    "fig.update_yaxes(showgrid=False)\n",
-    "fig.write_html(\"Labb2_visualiseringar/upg1_a.html\")\n",
-    "fig.show()\n"
+    "linear_fig.update_xaxes(dtick=1,range=[2018,2023])\n",
+    "linear_fig.update_xaxes(showgrid=False)\n",
+    "linear_fig.update_yaxes(showgrid=False)\n",
+    "# Gör linjerna tjockare\n",
+    "linear_fig.update_traces(line=dict(width=4))\n",
+    "linear_fig.update_layout(plot_bgcolor=\"white\")\n",
+    "linear_fig.write_html(\"Labb2_visualiseringar/upg1_a.html\")\n",
+    "linear_fig.show()\n"
    ]
   },
   {
@@ -1380,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1402,8 @@
          "legendgroup": "Totalt meritvärde 16 ämnen",
          "line": {
           "color": "#636efa",
-          "dash": "solid"
+          "dash": "solid",
+          "width": 4
          },
          "marker": {
           "symbol": "circle"
@@ -1427,7 +1435,8 @@
          "legendgroup": "Flickor meritvärde 16 ämnen",
          "line": {
           "color": "#EF553B",
-          "dash": "solid"
+          "dash": "solid",
+          "width": 4
          },
          "marker": {
           "symbol": "circle"
@@ -1459,7 +1468,8 @@
          "legendgroup": "Pojkar meritvärde 16 ämnen",
          "line": {
           "color": "#00cc96",
-          "dash": "solid"
+          "dash": "solid",
+          "width": 4
          },
          "marker": {
           "symbol": "circle"
@@ -1494,6 +1504,7 @@
          },
          "tracegroupgap": 0
         },
+        "plot_bgcolor": "white",
         "template": {
          "data": {
           "bar": [
@@ -2364,10 +2375,10 @@
     "]\n",
     "\n",
     "# Filtrera bort rader som inte matchar det förväntade läsårsformatet som t.ex. 2019/20\n",
-    "df = df[df['Läsår'].str.contains('^\\d{4}/\\d{2}$', na=False)]\n",
+    "df = df[df[\"Läsår\"].str.contains(\"^\\d{4}/\\d{2}$\", na=False)]\n",
     "\n",
     "# Extraherar startåret och lägger till 1 för att få slutåret\n",
-    "df['Läsår'] = df['Läsår'].str.slice(0, 4).astype(int)\n",
+    "df[\"Läsår\"] = df[\"Läsår\"].str.slice(0, 4).astype(int)\n",
     "\n",
     "# Skapar linjediagrammet\n",
     "fig = px.line(df, x=\"Läsår\", y=[\"Totalt meritvärde 16 ämnen\", \"Flickor meritvärde 16 ämnen\", \"Pojkar meritvärde 16 ämnen\"],\n",
@@ -2380,6 +2391,9 @@
     "fig.update_yaxes(showgrid=False)\n",
     "fig.update_xaxes(tickfont=dict(color=\"#999\"))\n",
     "fig.update_yaxes(tickfont=dict(color=\"#999\"))\n",
+    "# Gör linjerna tjockare\n",
+    "fig.update_traces(line=dict(width=4))\n",
+    "fig.update_layout(plot_bgcolor=\"white\")\n",
     "fig.write_html(\"Labb2_visualiseringar/upg1_b.html\")\n",
     "fig.show()"
    ]
@@ -2394,7 +2408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -2495,6 +2509,7 @@
           "yref": "paper"
          }
         ],
+        "plot_bgcolor": "white",
         "template": {
          "data": {
           "bar": [
@@ -3404,24 +3419,25 @@
     "import plotly.graph_objects as go\n",
     "\n",
     "# Skapa en figur för meritvärde\n",
-    "fig_merit = make_subplots(rows=1, cols=3, subplot_titles=('Förgymnasial utbildning', 'Gymnasial utbildning', 'Eftergymnasial utbildning'))\n",
+    "fig_merit = make_subplots(rows=1, cols=3, subplot_titles=(\"Förgymnasial utbildning\", \"Gymnasial utbildning\", \"Eftergymnasial utbildning\"))\n",
     "\n",
     "# Lägger till stapeldiagram för meritvärde för varje utbildningsnivå\n",
     "# Förgymnasial utbildning\n",
-    "fig_merit.add_trace(go.Bar(x=['Totalt', 'Flickor', 'Pojkar'], y=[163.8, 172.2, 155.8], name='Förgymnasial'), row=1, col=1)\n",
+    "fig_merit.add_trace(go.Bar(x=[\"Totalt\", \"Flickor\", \"Pojkar\"], y=[163.8, 172.2, 155.8], name=\"Förgymnasial\"), row=1, col=1)\n",
     "# Gymnasial utbildning\n",
-    "fig_merit.add_trace(go.Bar(x=['Totalt', 'Flickor', 'Pojkar'], y=[197.4, 207.2, 188.2], name='Gymnasial'), row=1, col=2)\n",
+    "fig_merit.add_trace(go.Bar(x=[\"Totalt\", \"Flickor\", \"Pojkar\"], y=[197.4, 207.2, 188.2], name=\"Gymnasial\"), row=1, col=2)\n",
     "# Eftergymnasial utbildning\n",
-    "fig_merit.add_trace(go.Bar(x=['Totalt', 'Flickor', 'Pojkar'], y=[239.1, 247.9, 230.7], name='Eftergymnasial'), row=1, col=3)\n",
+    "fig_merit.add_trace(go.Bar(x=[\"Totalt\", \"Flickor\", \"Pojkar\"], y=[239.1, 247.9, 230.7], name=\"Eftergymnasial\"), row=1, col=3)\n",
     "\n",
     "# Uppdatera layout\n",
-    "fig_merit.update_yaxes(title_text='Meritvärde', range=[0, 300], row=1, col=1)\n",
+    "fig_merit.update_yaxes(title_text=\"Meritvärde\", range=[0, 300], row=1, col=1)\n",
     "fig_merit.update_yaxes(range=[0, 300], row=1, col=2)\n",
     "fig_merit.update_yaxes(range=[0, 300], row=1, col=3)\n",
     "fig_merit.update_xaxes(showgrid=False)\n",
     "fig_merit.update_yaxes(showgrid=False)\n",
     "fig_merit.update_xaxes(tickfont=dict(color=\"#999\"))\n",
     "fig_merit.update_yaxes(tickfont=dict(color=\"#999\"))\n",
+    "fig_merit.update_layout(plot_bgcolor=\"white\")\n",
     "fig_merit.write_html(\"Labb2_visualiseringar/upg1_c.html\")\n",
     "fig_merit.show()\n",
     "\n",
@@ -3433,7 +3449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -3534,6 +3550,7 @@
           "yref": "paper"
          }
         ],
+        "plot_bgcolor": "white",
         "template": {
          "data": {
           "bar": [
@@ -4440,23 +4457,25 @@
    ],
    "source": [
     "# Skapa en figur för andelen saknat betyg\n",
-    "fig_saknat_betyg = make_subplots(rows=1, cols=3, subplot_titles=('Förgymnasial utbildning', 'Gymnasial utbildning', 'Eftergymnasial utbildning'))\n",
+    "fig_saknat_betyg = make_subplots(rows=1, cols=3, subplot_titles=(\"Förgymnasial utbildning\", \"Gymnasial utbildning\", \"Eftergymnasial utbildning\"))\n",
     "\n",
     "# Förgymnasial utbildning\n",
-    "fig_saknat_betyg.add_trace(go.Bar(x=['Totalt', 'Flickor', 'Pojkar'], y=[63.5, 61.5, 65.3], name='Förgymnasial'), row=1, col=1)\n",
+    "fig_saknat_betyg.add_trace(go.Bar(x=[\"Totalt\", \"Flickor\", \"Pojkar\"], y=[63.5, 61.5, 65.3], name=\"Förgymnasial\"), row=1, col=1)\n",
     "# Gymnasial utbildning\n",
-    "fig_saknat_betyg.add_trace(go.Bar(x=['Totalt', 'Flickor', 'Pojkar'], y=[37.4, 35.2, 39.5], name='Gymnasial'), row=1, col=2)\n",
+    "fig_saknat_betyg.add_trace(go.Bar(x=[\"Totalt\", \"Flickor\", \"Pojkar\"], y=[37.4, 35.2, 39.5], name=\"Gymnasial\"), row=1, col=2)\n",
     "# Eftergymnasial utbildning\n",
-    "fig_saknat_betyg.add_trace(go.Bar(x=['Totalt', 'Flickor', 'Pojkar'], y=[16.8, 16.1, 17.5], name='Eftergymnasial'), row=1, col=3)\n",
+    "fig_saknat_betyg.add_trace(go.Bar(x=[\"Totalt\", \"Flickor\", \"Pojkar2\"], y=[16.8, 16.1, 17.5], name=\"Eftergymnasial\"), row=1, col=3)\n",
     "\n",
     "# Uppdaterar layout\n",
-    "fig_saknat_betyg.update_yaxes(title_text='Andel saknat betyg (%)', range=[0, 100], row=1, col=1)\n",
+    "fig_saknat_betyg.update_yaxes(title_text=\"Andel saknat betyg (%)\", range=[0, 100], row=1, col=1)\n",
     "fig_saknat_betyg.update_yaxes(range=[0, 100], row=1, col=2)\n",
     "fig_saknat_betyg.update_yaxes(range=[0, 100], row=1, col=3)\n",
     "fig_saknat_betyg.update_xaxes(showgrid=False)\n",
     "fig_saknat_betyg.update_yaxes(showgrid=False)\n",
     "fig_saknat_betyg.update_xaxes(tickfont=dict(color=\"#999\"))\n",
     "fig_saknat_betyg.update_yaxes(tickfont=dict(color=\"#999\"))\n",
+    "\n",
+    "fig_saknat_betyg.update_layout(plot_bgcolor=\"white\")\n",
     "fig_saknat_betyg.write_html(\"Labb2_visualiseringar/upg1_c1.html\")\n",
     "\n",
     "fig_saknat_betyg.show()\n",
@@ -4529,7 +4548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -4544,7 +4563,8 @@
          "legendgroup": "",
          "line": {
           "color": "#636efa",
-          "dash": "solid"
+          "dash": "solid",
+          "width": 4
          },
          "marker": {
           "symbol": "circle"
@@ -4574,6 +4594,7 @@
         "legend": {
          "tracegroupgap": 0
         },
+        "plot_bgcolor": "white",
         "template": {
          "data": {
           "bar": [
@@ -5440,6 +5461,11 @@
     "fig1.update_yaxes(showgrid=False)\n",
     "fig1.update_xaxes(tickfont=dict(color=\"#999\"))\n",
     "fig1.update_yaxes(tickfont=dict(color=\"#999\"))\n",
+    "\n",
+    "# Gör linjerna tjockare\n",
+    "fig1.update_traces(line=dict(width=4))\n",
+    "\n",
+    "fig1.update_layout(plot_bgcolor='white')\n",
     "\n",
     "fig1.write_html(\"Labb2_visualiseringar/upg2_first_graph.html\")\n",
     "fig1.show()\n"
