Used iloc and maskin to solve my parseproblem, now it works!

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "3            14.2  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2408,7 +2408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2474,7 +2474,7 @@
            "size": 16
           },
           "showarrow": false,
-          "text": "Förgymnasial utbildning",
+          "text": "Förgymnasial",
           "x": 0.14444444444444446,
           "xanchor": "center",
           "xref": "paper",
@@ -2487,7 +2487,7 @@
            "size": 16
           },
           "showarrow": false,
-          "text": "Gymnasial utbildning",
+          "text": "Gymnasial",
           "x": 0.5,
           "xanchor": "center",
           "xref": "paper",
@@ -2500,7 +2500,7 @@
            "size": 16
           },
           "showarrow": false,
-          "text": "Eftergymnasial utbildning",
+          "text": "Eftergymnasial",
           "x": 0.8555555555555556,
           "xanchor": "center",
           "xref": "paper",
@@ -3325,6 +3325,10 @@
            "zerolinewidth": 2
           }
          }
+        },
+        "title": {
+         "text": "Genomsnittligt meritvärde per utbildningsnivå",
+         "x": 0.5
         },
         "xaxis": {
          "anchor": "y",
@@ -3415,21 +3419,48 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "from plotly.subplots import make_subplots\n",
     "import plotly.graph_objects as go\n",
     "\n",
-    "# Skapa en figur för meritvärde\n",
-    "fig_merit = make_subplots(rows=1, cols=3, subplot_titles=(\"Förgymnasial utbildning\", \"Gymnasial utbildning\", \"Eftergymnasial utbildning\"))\n",
+    "df = pd.read_excel(\"../data/betyg_o_prov_riksnivå.xlsx\", sheet_name=\"Tabell 1B\", usecols=\"A:D\")\n",
     "\n",
-    "# Lägger till stapeldiagram för meritvärde för varje utbildningsnivå\n",
-    "# Förgymnasial utbildning\n",
-    "fig_merit.add_trace(go.Bar(x=[\"Totalt\", \"Flickor\", \"Pojkar\"], y=[163.8, 172.2, 155.8], name=\"Förgymnasial\"), row=1, col=1)\n",
-    "# Gymnasial utbildning\n",
-    "fig_merit.add_trace(go.Bar(x=[\"Totalt\", \"Flickor\", \"Pojkar\"], y=[197.4, 207.2, 188.2], name=\"Gymnasial\"), row=1, col=2)\n",
-    "# Eftergymnasial utbildning\n",
-    "fig_merit.add_trace(go.Bar(x=[\"Totalt\", \"Flickor\", \"Pojkar\"], y=[239.1, 247.9, 230.7], name=\"Eftergymnasial\"), row=1, col=3)\n",
+    "df.columns = [\n",
+    "    \"Läsår\", \n",
+    "    \"Totalt meritvärde 16 ämnen\", \n",
+    "    \"Flickor meritvärde 16 ämnen\", \n",
+    "    \"Pojkar meritvärde 16 ämnen\"\n",
+    "]\n",
     "\n",
-    "# Uppdatera layout\n",
+    "# Skapar en mask för att identifiera rader som innehåller någon av utbildningrna\n",
+    "nivåer = [\"Förgymnasial\", \"Gymnasial\", \"Eftergymnasial\"]\n",
+    "mask = df.apply(lambda row: row.astype(str).str.contains('|'.join(nivåer)).any(), axis=1)\n",
+    "\n",
+    "# Använder masken för att filtrera DataFrame och skapa en ny DataFrame med bara önskade rader\n",
+    "filtered_df = df[mask]\n",
+    "\n",
+    "# Skapar en figur med en subplot för varje utbildningsnivå\n",
+    "fig_merit = make_subplots(rows=1, cols=3, subplot_titles=tuple(nivåer))\n",
+    "\n",
+    "# Lägger till en stapel för varje utbildningsnivå i motsvarande subplot\n",
+    "for i, utbildningsnivå in enumerate(nivåer):\n",
+    "    # Filtrerar data för varje specifik utbildningsnivå\n",
+    "    current_data = filtered_df[filtered_df.apply(lambda row: utbildningsnivå in row[\"Läsår\"], axis=1)]\n",
+    "    # Lägger till stapeldiagram för aktuell nivå\n",
+    "    fig_merit.add_trace(\n",
+    "        go.Bar(\n",
+    "            x=[\"Totalt\", \"Flickor\", \"Pojkar\"],\n",
+    "            y=[\n",
+    "                current_data[\"Totalt meritvärde 16 ämnen\"].values[0],\n",
+    "                current_data[\"Flickor meritvärde 16 ämnen\"].values[0],\n",
+    "                current_data[\"Pojkar meritvärde 16 ämnen\"].values[0]\n",
+    "            ],\n",
+    "            name=utbildningsnivå\n",
+    "        ),\n",
+    "        row=1, col=i+1\n",
+    "    )\n",
+    "\n",
+    "# Uppdaterar layouten\n",
     "fig_merit.update_yaxes(title_text=\"Meritvärde\", range=[0, 300], row=1, col=1)\n",
     "fig_merit.update_yaxes(range=[0, 300], row=1, col=2)\n",
     "fig_merit.update_yaxes(range=[0, 300], row=1, col=3)\n",
@@ -3438,18 +3469,16 @@
     "fig_merit.update_xaxes(tickfont=dict(color=\"#999\"))\n",
     "fig_merit.update_yaxes(tickfont=dict(color=\"#999\"))\n",
     "fig_merit.update_layout(plot_bgcolor=\"white\")\n",
+    "fig_merit.update_layout(title_text=\"Genomsnittligt meritvärde per utbildningsnivå\", title_x=0.5)\n",
+    "\n",
+    "\n",
     "fig_merit.write_html(\"Labb2_visualiseringar/upg1_c.html\")\n",
-    "fig_merit.show()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "fig_merit.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -3515,7 +3544,7 @@
            "size": 16
           },
           "showarrow": false,
-          "text": "Förgymnasial utbildning",
+          "text": "Förgymnasial",
           "x": 0.14444444444444446,
           "xanchor": "center",
           "xref": "paper",
@@ -3528,7 +3557,7 @@
            "size": 16
           },
           "showarrow": false,
-          "text": "Gymnasial utbildning",
+          "text": "Gymnasial",
           "x": 0.5,
           "xanchor": "center",
           "xref": "paper",
@@ -3541,7 +3570,7 @@
            "size": 16
           },
           "showarrow": false,
-          "text": "Eftergymnasial utbildning",
+          "text": "Eftergymnasial",
           "x": 0.8555555555555556,
           "xanchor": "center",
           "xref": "paper",
@@ -4367,6 +4396,10 @@
           }
          }
         },
+        "title": {
+         "text": "Andel (%) elever som saknar godkänt betyg baserat på utbildningsnivå av föräldrarna",
+         "x": 0.5
+        },
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -4456,17 +4489,37 @@
     }
    ],
    "source": [
-    "# Skapa en figur för andelen saknat betyg\n",
-    "fig_saknat_betyg = make_subplots(rows=1, cols=3, subplot_titles=(\"Förgymnasial utbildning\", \"Gymnasial utbildning\", \"Eftergymnasial utbildning\"))\n",
+    "df = pd.read_excel(\"../data/betyg_o_prov_riksnivå.xlsx\", sheet_name=\"Tabell 1B\", skiprows=6)\n",
     "\n",
-    "# Förgymnasial utbildning\n",
-    "fig_saknat_betyg.add_trace(go.Bar(x=[\"Totalt\", \"Flickor\", \"Pojkar\"], y=[63.5, 61.5, 65.3], name=\"Förgymnasial\"), row=1, col=1)\n",
-    "# Gymnasial utbildning\n",
-    "fig_saknat_betyg.add_trace(go.Bar(x=[\"Totalt\", \"Flickor\", \"Pojkar\"], y=[37.4, 35.2, 39.5], name=\"Gymnasial\"), row=1, col=2)\n",
-    "# Eftergymnasial utbildning\n",
-    "fig_saknat_betyg.add_trace(go.Bar(x=[\"Totalt\", \"Flickor\", \"Pojkar2\"], y=[16.8, 16.1, 17.5], name=\"Eftergymnasial\"), row=1, col=3)\n",
+    "# Skapar en mask för att identifiera relevanta rader\n",
+    "nivåer = [\"Förgymnasial\", \"Gymnasial\", \"Eftergymnasial\"]\n",
+    "# Använder iloc för att undvika fel med kolumnnamn, filtrerar baserat på Läsår-kolumnen som är den första kolumnen.\n",
+    "mask = df.iloc[:, 0].astype(str).str.contains('|'.join(nivåer))\n",
     "\n",
-    "# Uppdaterar layout\n",
+    "# Tillämpar masken\n",
+    "filtered_df = df[mask]\n",
+    "\n",
+    "fig_saknat_betyg = make_subplots(rows=1, cols=3, subplot_titles=tuple(nivåer))\n",
+    "\n",
+    "# Lägger till staplar för varje kategori\n",
+    "for i, nivå in enumerate(nivåer):\n",
+    "    # Filtrerar data för varje nivå\n",
+    "    current_data = filtered_df[filtered_df.iloc[:, 0].astype(str).str.contains(nivå)]\n",
+    "    # Lägger till data till diagrammet\n",
+    "    fig_saknat_betyg.add_trace(\n",
+    "        go.Bar(\n",
+    "            x=[\"Totalt\", \"Flickor\", \"Pojkar\"],\n",
+    "            y=[\n",
+    "                current_data.iloc[:, -3].mean(),  \n",
+    "                current_data.iloc[:, -2].mean(),\n",
+    "                current_data.iloc[:, -1].mean() \n",
+    "            ],\n",
+    "            name=nivå\n",
+    "        ),\n",
+    "        row=1, col=i+1\n",
+    "    )\n",
+    "\n",
+    "# Uppdaterar layouten och justterar alla subplotter till en enhetlig y-axel för lättare avläsning\n",
     "fig_saknat_betyg.update_yaxes(title_text=\"Andel saknat betyg (%)\", range=[0, 100], row=1, col=1)\n",
     "fig_saknat_betyg.update_yaxes(range=[0, 100], row=1, col=2)\n",
     "fig_saknat_betyg.update_yaxes(range=[0, 100], row=1, col=3)\n",
@@ -4474,10 +4527,12 @@
     "fig_saknat_betyg.update_yaxes(showgrid=False)\n",
     "fig_saknat_betyg.update_xaxes(tickfont=dict(color=\"#999\"))\n",
     "fig_saknat_betyg.update_yaxes(tickfont=dict(color=\"#999\"))\n",
-    "\n",
-    "fig_saknat_betyg.update_layout(plot_bgcolor=\"white\")\n",
+    "fig_saknat_betyg.update_layout(\n",
+    "    title_text=\"Andel (%) elever som saknar godkänt betyg baserat på utbildningsnivå av föräldrarna\",\n",
+    "    title_x=0.5,\n",
+    "    plot_bgcolor=\"white\"\n",
+    ")\n",
     "fig_saknat_betyg.write_html(\"Labb2_visualiseringar/upg1_c1.html\")\n",
-    "\n",
     "fig_saknat_betyg.show()\n",
     "\n"
    ]
@@ -4510,7 +4565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4548,7 +4603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -5482,7 +5537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -6558,7 +6613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
